[tool.poetry]
name = "rankingladder"
version = "0.1.0"
description = ""
authors = ["serkan <scelebioglu13@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "<2.0"
fastapi = "^0.115.5"
uvicorn = "^0.32.0"
httpx = "^0.27.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[tool.poetry.group.dev.dependencies]
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
